--- a/InCallUI/res/values/styles.xml
+++ b/InCallUI/res/values/styles.xml
@@ -81,7 +81,9 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="dialpad_key_button_touch_tint">@color/incall_dialpad_touch_tint</item>
         <item name="android:textColorPrimary">@color/incall_call_banner_text_color</item>
-        <item name="android:colorPrimaryDark">@color/dialer_theme_color_dark</item>
+        <item name="android:colorPrimaryDark">#00796B</item>
+        <item name="android:statusBarColor">#00796B</item>
+        <item name="android:navigationBarColor">#00796B</item>
         <item name="android:popupMenuStyle">@style/InCallPopupMenuStyle</item>
         <item name="android:actionBarStyle">@style/InCallActionBarStyle</item>
         <item name="android:buttonStyleToggle">@style/InCallCompoundButton</item>
