--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,8 +15,11 @@
 -->
 
 <resources>
+	<!-- Hexagon Primary Color -->
+    <color name="hexagon_primary">#ff58bab1</color>
+    <color name="hexagon_text">#ff2e2e2e</color>
     <!--  Primary text color in the Dialer -->
-    <color name="dialtacts_primary_text_color">#333333</color>
+    <color name="dialtacts_primary_text_color">@color/hexagon_primary</color>
     <!-- Secondary text color in the Dialer -->
     <color name="dialtacts_secondary_text_color">#636363</color>
     <color name="dialer_red_highlight_color">#ff1744</color>
@@ -119,7 +122,7 @@
     <!-- Color for icons in the actionbar -->
     <color name="actionbar_icon_color">#ffffff</color>
 
-    <color name="dialer_dialpad_touch_tint">#330288d1</color>
+    <color name="dialer_dialpad_touch_tint">#a38ed0ca</color>
 
     <color name="floating_action_button_touch_tint">#80ffffff</color>
 
